# tigel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/tigel/: __init__.py
